Fixing issue on reserve page
The reserve page was not showing any content other than what was initially on the page. Removed a css class that was giving the body element a height of  100vh and setting the overflow to hidden

--- a/scss/reserve.scss
+++ b/scss/reserve.scss
@@ -56,13 +56,6 @@
   color: #3498db;
 }
 
-body {
-  height: 100vh;
-  overflow: hidden;
-  background-color: #D4D9ED;
-  font-family: "Roboto", sans-serif;
-}
-
 .w-table {
   display: table;
   width: 100%;
